[project]
authors = [{name = "Martin Fleischmann", email = "martin@martinfleischmann.net"}]
dependencies = []
name = "boundaries_of_change"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

# [tool.pixi.pypi-dependencies]
# boundaries_of_change = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
geopandas = ">=1.0.1,<2"
dask-geopandas = ">=0.4.3,<0.5"
pyarrow = ">=19.0.1,<20"
seaborn = ">=0.13.2,<0.14"
pysal = ">=2.1.0,<3"
statsmodels = ">=0.14.4,<0.15"
numba = ">=0.61.0,<0.62"
jupyter = ">=1.1.1,<2"
ruff = ">=0.9.7,<0.10"
pre-commit = ">=4.1.0,<5"
distributed = "*"
jupyter-scatter = ">=0.21.1,<0.22"
libpysal = ">=4.12.1,<5"
